// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersDetailsPanel /> renders users detailsPanel 1`] = `
<styled.div
  id="dtpanel-users"
>
  Mock Child
  <Connect(DetailWrapper)
    contains="skills"
    data-automation="skillsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Skills"
      userHasUpdatePermission={true}
    />
    <_class
      contains="skills"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="groups"
    data-automation="groupsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Groups"
      userHasUpdatePermission={true}
    />
    <_class
      contains="groups"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    data-automation="reasonListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="reasonLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="messageTemplates"
    data-automation="messageTemplatesSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Message Templates"
      userHasUpdatePermission={true}
    />
    <_class
      contains="messageTemplates"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="transferLists"
    data-automation="transferListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Transfer Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="transferLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    data-automation="outboundIdentifierListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="outboundIdentifierLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<UsersDetailsPanel /> renders users detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-users"
>
  Mock Child
  <Connect(DetailWrapper)
    contains="skills"
    data-automation="skillsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Skills"
      userHasUpdatePermission={false}
    />
    <_class
      contains="skills"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="groups"
    data-automation="groupsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Groups"
      userHasUpdatePermission={false}
    />
    <_class
      contains="groups"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    data-automation="reasonListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="reasonLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="messageTemplates"
    data-automation="messageTemplatesSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Message Templates"
      userHasUpdatePermission={false}
    />
    <_class
      contains="messageTemplates"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="transferLists"
    data-automation="transferListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Transfer Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="transferLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    data-automation="outboundIdentifierListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="outboundIdentifierLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<UsersDetailsPanel /> renders users detailsPanel with no update permision and active disabled 1`] = `
<styled.div
  id="dtpanel-users"
>
  Mock Child
  <Connect(DetailWrapper)
    contains="skills"
    data-automation="skillsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Skills"
      userHasUpdatePermission={false}
    />
    <_class
      contains="skills"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="groups"
    data-automation="groupsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Groups"
      userHasUpdatePermission={false}
    />
    <_class
      contains="groups"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    data-automation="reasonListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="reasonLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="messageTemplates"
    data-automation="messageTemplatesSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Message Templates"
      userHasUpdatePermission={false}
    />
    <_class
      contains="messageTemplates"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="transferLists"
    data-automation="transferListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Transfer Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="transferLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    data-automation="outboundIdentifierListsSVG"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="outboundIdentifierLists"
      filtered={Array []}
      items={Array []}
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;
